--- a/bibliography.tex
+++ b/bibliography.tex
@@ -36,4 +36,10 @@
     \bibitem{rtm}
     Reverse Time Migration
 
+    \bibitem{rtm_psdm}
+    M. H. Karazincir and C. M. Gerrard,
+    \emph{Explicit high-order reversetime pre-stack depth migration,}
+    in 76th Annual International Meeting, SEG, Expanded Abstracts, 2006,
+    vol. 25, pp. 2353-2357.
+
 \end{thebibliography}
