--- a/fpga.tex
+++ b/fpga.tex
@@ -29,7 +29,7 @@ developers devotes their energies to FPGA.
 
 \subsection{The Architecture of FPGA}
 
-A typical layout of FPGA (see Figure~\ref{fig:fpga_arch}) is an array of
+A typical layout of FPGA, Figure (\ref{fig:fpga_arch}) is an array of
 interconnected programmable logic blocks or configurable logic blocks. It
 provides the designer with programmable logic blocks that contain the pool
 of combinatorial blocks and flip-flops to be used in the design. Logic is
@@ -86,7 +86,7 @@ functional elements, configurable Logic Blocks (CLBs), Input/Output Blocks
     and phase-shifting clock signals.
 \end{itemize}
 
-These elements are organized as shown in Figure~\ref{fig:spartan_arch},
+These elements are organized as shown in Figure (\ref{fig:spartan_arch}),
 using the Spartan-3A FPGA
 array as an example. A dual ring of staggered IOBs surrounds a regular
 array of CLBs in the Spartan-3 and Extended Spartan-3A family. The
@@ -141,7 +141,7 @@ developer to create FPGA configuring because it has a higher abstract of
 the underlining subtle hardware information, and then provide a set of
 Application Interface for developers.
 
-Figure~\ref{fig:maxeler_acceleration_system} have a sketch of Maxeler
+Figure (\ref{fig:maxeler_acceleration_system}) have a sketch of Maxeler
 acceleration system architecture. The system comprises several FPGAs
 attached directly to the local memory and to a host CPU via PCI Express.
 
@@ -172,7 +172,7 @@ If the developer want to accelerate an application after he identifies the
 runtime intensive part of the program, what he needs includes three parts,
 designing the kernel, manager configuration and adapt the host application.
 All the three parts can be easily implemented with the help of Maxeler
-compiler tools. Figure \ref{fig:development_flow} presents the development flow with the main
+compiler tools. Figure (\ref{fig:development_flow}) presents the development flow with the main
 components of MaxCompiler.
 
 \begin{figure}[h]
