--- a/introduction.tex
+++ b/introduction.tex
@@ -4,7 +4,7 @@
 The goal of exploration seismology is to find oil and gas reservoirs
 by seismically imaging the earth's reflectivity distribution. Towards
 this goal, exploration geophysicists perform seismic experiments ideally
-equivalent to that shown in Figure ~\ref{fig:oil-drilling}.
+equivalent to that shown in Figure (\ref{fig:oil-drilling}).
 
 \begin{figure}[h]
 \centering
