--- a/seismic.tex
+++ b/seismic.tex
@@ -29,7 +29,7 @@ rocks, gas, oil, faults etc in the subsurface.
 \subsection{General Process of Seismic Exploration}
 
 Seismic exploration, as one of the background knowledge of this thesis,
-is explained in this section. Figure \ref{fig:sea_floor_seismic} shows a
+is explained in this section. Figure (\ref{fig:sea_floor_seismic}) shows a
 typical scenario of a marine
 based seismic exploration. The vessel will inject waves periodically by the
 air gun. The waves just injected will spread in all direction quickly until
@@ -37,7 +37,7 @@ it penetrate different media, such as rocks, ands, gas, or oil beneath the
 water, where the waves will reflect back or refract through another medium.
 The reflected waves, or those refracts first, then reflected waves would be
 recorded by an large array of Geo phones. In figure
-\ref{fig:sea_floor_seismic}, another smaller ship shows up, dragging a
+(\ref{fig:sea_floor_seismic}), another smaller ship shows up, dragging a
 cable
 which contains an array of sensors to record the reflected signals.
 
@@ -77,7 +77,7 @@ varies from the different medium, for example, the speed of sound is nearly
 of the speed inside the earth, we can infer what is inside the earth.
 
 The conventional one-way pre-stack depth migration approach, works well in
-the layer medium, shown in Figure \ref{fig:layer_structure}. If the desired
+the layer medium, shown in Figure (\ref{fig:layer_structure}). If the desired
 layer, such as the gas or the oil lies horizontally, it can be easily
 discovered with the conventional approach.
 
@@ -107,7 +107,7 @@ Migration is a two-way pre-stack depth migration, which handles steeply
 dipping events, turning waves and multiples. The detail of the algorithm
 will be explained in the next section.
 
-Figure \ref{fig:comparison} show an introductory example with synthetic
+Figure (\ref{fig:comparison}) show an introductory example with synthetic
 data that illustrates the potential power of the Reverse Time Migration.
 There are mainly two part of object in the model, one is water (color from
 blue to yellow), the other one is salt (color in red). The figure in the
@@ -125,7 +125,7 @@ water, so the color is in red, a darker color than yellow.
 \end{figure}
 
 Concerning about the result, we take a comparison of the middle and right
-one in Figure \ref{fig:comparison}. The middle one is generated using the
+one in Figure (\ref{fig:comparison}). The middle one is generated using the
 one-way wave equation. It is obvious that the salt flank below the overhang
 is poorly imaged. On real data, it is difficult to understand the dip and
 the structure of sedimentary strata in similar overhang zone. Thus the
