--- a/bibliography.tex
+++ b/bibliography.tex
@@ -13,13 +13,17 @@
     An Experience with the SEG/EAGE Data Set.} The Leading Edge, 22(1):38-41,
     2003.
 
-    \bibitem{moore} Moores law, Wikipedia, the free encyclopedia.
+    \bibitem{moore}
+    \emph{Moores law, Wikipedia, the free encyclopedia} [online],
+    http://en.wikipedia.org/wiki/Moore's\_law.
 
     \bibitem{shafiq} M. Shafiq, M. Pericas, N. Navarro, and E. Ayguade,
     \emph{A Streaming Based High Performance FPGA Core for 3D Reverse
     Time Migration.}
 
-    \bibitem{top500} Top500 List - November 2012
+    \bibitem{top500}
+    \emph{Top500 super computer sites - November 2012} [online],
+    http://www.top500.org
 
     \bibitem{fpgaintro}
     J. Serrano,
@@ -28,18 +32,25 @@
 
     \bibitem{fpgaug}
     Xilinx Inc,
-    \emph{FPGA USER GUIDE}
+    \emph{Xilinx UG331 Spartan-3 Generation FPGA User Guide}
 
     \bibitem{max_white_paper}
-    MaxCompiler White Paper
+    Maxeler Technologies,
+    \emph{MaxCompiler White Paper} [online],
+    https://www.maxeler.com/media/documents/MaxelerWhitePaperMaxCompiler.pdf
 
     \bibitem{rtm}
-    Reverse Time Migration
+    PGS Techlink,
+    \emph{Reverse Time Migration} [online],
+    http://www.pgs.com/upload/188525/techlink40\_rtm\_sm.pdf
 
     \bibitem{rtm_psdm}
     M. H. Karazincir and C. M. Gerrard,
     \emph{Explicit high-order reversetime pre-stack depth migration,}
     in 76th Annual International Meeting, SEG, Expanded Abstracts, 2006,
     vol. 25, pp. 2353-2357.
+
+    \bibitem{maxcompiler_tutorial}
+    \emph{MaxCompilerKernel Compiler Tutorial} [commercial]
 
 \end{thebibliography}
