--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,7 @@
 
 \section{Introduction}
 
+\subsection{Overview of seismic exploration}
 The goal of exploration seismology is to find oil and gas reservoirs
 by seismically imaging the earth's reflectivity distribution. Towards
 this goal, exploration geophysicists perform seismic experiments ideally
@@ -26,8 +27,7 @@ a high computational-demanding imaging algorithm.%
 \footnote{The complexity of RTM for a single shot is roughly \BigO{n4}%
 }
 
-
-
+\subsection{Improving computing performance}
 The ultimate and perhaps unattainable goal of computer science is
 to make the computer to do whatever we want in perfect accuracy, speed,
 security and on and on. Over time, the number of transistor on integrated
@@ -39,6 +39,9 @@ and memory, or the access speed of memory and disk, have failed to
 keep up. As a result, the performance of the whole system isn't likely
 to improve a lot, and the access latencies frequently become a bottleneck
 in the system.
+
+\subsubsection{Homogeneous architecture} % (fold)
+\label{ssub:Homogeneous architecture}
 
 Lots of efforts have been made facing with the access latencies, and
 some of the methods gained extraordinary achievement. For example,
@@ -113,6 +116,7 @@ imaging, weather simulation, ocean simulation, or global simulation.
 And they need higher computational performance for a higher resolution
 of the simulation.
 
+\subsubsection{Hybrid architecture}
 Some vendors manufacture co-processor to aid CPU to better perform
 general computing. For example, the NVIDIA Cooperation publish its
 GPU accelerating card, which consists of hundreds of core in a single
@@ -144,6 +148,7 @@ In this paper, I present my FPGA-based solution for the Reverse Time
 Migration (RTM) algorithm ~\cite{yoon03}, which is the most computationally-demanding
 imaging algorithms in oil and gas exploration.
 
+\subsection{Reverse Time Migration}
 The Reverse Time Migration (RTM) is a wave equation depth migration
 method. It offers insights into geology that were previously impossible
 to interpret or understand using seismic data.
@@ -171,3 +176,7 @@ In this work, by utilizing the great computing performance of FPGA
 and enormous internal memory bandwidth of the FPGA, I manage to implement
 the computationally-demanding Reverse Time Migration algorithm in
 FPGA.
+
+\subsection{Structure of the thesis}
+
+\subsection{Contributions}
