--- a/main.tex
+++ b/main.tex
@@ -63,7 +63,7 @@ backgroundcolor=\color{white},   % choose the background color; you must add \us
 
 \begin{document}
 
-\title{Implemention of Reverse Time Migration on FPGA}
+\title{FPGA-based Solution for Reverse Time Migration Algorithm}
 \author{Conghui He}
 
 \maketitle
