--- a/introduction.tex
+++ b/introduction.tex
@@ -1,4 +1,3 @@
-
 \section{Introduction}
 
 \subsection{Overview of seismic exploration}
@@ -116,6 +115,7 @@ imaging, weather simulation, ocean simulation, or global simulation.
 And they need higher computational performance for a higher resolution
 of the simulation.
 
+
 \subsubsection{Hybrid architecture}
 Some vendors manufacture co-processor to aid CPU to better perform
 general computing. For example, the NVIDIA Cooperation publish its
@@ -175,8 +175,43 @@ in common computer clusters ~\cite{fu11}.
 In this work, by utilizing the great computing performance of FPGA
 and enormous internal memory bandwidth of the FPGA, I manage to implement
 the computationally-demanding Reverse Time Migration algorithm in
-FPGA.
+FPGA, which achieves a speed up of 6x time than that of CPU's.
 
 \subsection{Structure of the thesis}
 
-\subsection{Contributions}
+By utilizing the abundant computation and storage resource FPGA, the thesis
+introduce the solution for the Reverse Time Migration (RTM) algorithm on
+FPGA from scratch. The main topic are described as follows:
+
+\begin{itemize}
+  \item section 2 take a brief overview of the architecture of FPGA and the
+    development platform Maxeler OS. It shows how to develop an application
+    or algorithm on the hardware with the help of Maxeler compiler.
+    (detailed in Section 2)
+
+ \item Section 3 describes the goal and process of seismic migration
+   where RTM is used for. In order to have a better understanding of 
+   Reverse Time Migration,
+   it is essential to have a look at the background and usage of RTM
+   algorithm.  (detailed in Section 3)
+
+ \item section 4 illustrate RTM algorithm, which is the most 
+   computationally-demanding algorithm in gas and oil
+   exploration,   and have a detail
+   analyze of it, showing why it is computationally-intensive and how
+   intensive it is. (detailed in Section 4)
+
+ \item section 5 shows the detail solution of the RTM algorithm which
+   is based on FPGA. Some of the core implementation details are
+   presented as pseudo-code. (detailed in Section 5)
+
+ \item section 6 demonstrate the result of the algorithm and compare the
+   time it consumed on FPGA and that on CPU. The advantage of the FPGA
+   solution for the algorithm is obvious in this section even the design
+   on the FPGA is without any optimization. (detailed in Section 6)
+
+ \item section 7 give us a brief conclusion,
+   describing what problem the thesis solve and the achievement it makes. 
+   (detailed in Section 7)
+\end{itemize}
+
